Created style.css file and linked it within HTML doc

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Navigational content with links-->
     <nav>
         <ul>
             <li>Header Logo</li>
@@ -13,7 +15,8 @@
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
-        
     </nav>
+
+
 </body>
 </html>
