--- a/index.html
+++ b/index.html
@@ -8,15 +8,76 @@
 </head>
 <body>
     <!--Navigational content with links-->
-    <nav>
-        <ul>
-            <li>Header Logo</li>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+    <nav class="navbar">
+       <div class="flex-container">
+            <div class="logo">Header Logo</div>
+            <ul class="nav">    
+                <li>
+                    <a href="header link one"></a>
+                </li>
+                <li>
+                    <a href="header link two"></a>
+                </li>
+                <li>
+                    <a href="header link three"></a>
+                </li>
+            </ul>
+       </div>
     </nav>
 
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="signbutton">Sign Up</button>
+                <img src="" alt="this is a placeholder for an image">
+            </div>
+        </div>
+    </header>
 
+
+    <section class="boxes">
+        <h2>Some random information.</h2>
+
+        <div class="box">
+            <img src="" alt="placeholder img">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+        <div class="box">
+            <img src="" alt="placeholder img">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+        <div class="box">
+            <img src="" alt="placeholder img">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+        <div class="box">
+            <img src="" alt="placeholder img">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </section>
+
+    <section class="quote">
+        <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
+        <h4>-Thor, God of Thunder</h4>
+    </section>
+
+    <section class="signup">
+        <div class="container2">
+            <div>
+                <h4>Call to action! It's time!</h4>
+                <p>Sign Up for our product by clicking that button right over there!</p>
+                <button class="signbutton2">Sign up</button>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <h4>Copyright &copy; The Odin Project 2021</h4>
+    </footer>
 </body>
 </html>
