--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 
     <header class="header">
         <div class="container">
-            <div>
+            <div class="headcontent">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="signbutton">Sign Up</button>
-                <img src="" alt="this is a placeholder for an image">
+                
+            </div>
+            <div class="headcontent">
+                <img src="img/placeholder.jpg" alt="this is a placeholder for an image"/>
             </div>
         </div>
     </header>
