--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             <h2>"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</h2>
             <h4>-Thor, God of Thunder</h4>
         </div>
-        
-       
     </section>
 
     <section class="signup">
         <div class="container">
-            <div>
+            <div class="box">
                 <h4>Call to action! It's time!</h4>
                 <p>Sign Up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="box">
                 <button class="signbutton2">Sign up</button>
             </div>
         </div>
