Styled footer content and finished project

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     </section>
 
     <footer class="footer">
-        <h4>Copyright &copy; The Odin Project 2021</h4>
+        <div class="container">
+            <h4>Copyright &copy; The Odin Project 2021</h4>
+        </div>
     </footer>
 </body>
 </html>
